--- a/frontend/src/components/Navigation/ProfileButton.css
+++ b/frontend/src/components/Navigation/ProfileButton.css
@@ -1,3 +1,15 @@
+.profile-dropdown {
+    display: flex;
+    flex-direction: column;
+}
+
 .profile-dropdown.hidden {
     display: none;
+}
+
+button {
+    width: fit-content;
+    height: fit-content;
+    align-items: center;
+    align-content: center;
 }
