--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,5 +1,8 @@
 nav {
-    background-color: gray;
+    background-color: black;
+    width: 100%;
+    position: sticky;
+    top: auto;
 }
 
 .home {
