font changed, dropdown menu edited

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,8 +1,13 @@
 /* TODO: Add sitewide styles */
+@font-face {
+    font-family: 'Inter';
+    src: "https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap";
+}
 
 html {
    background-color: black;
    color: white;
+   font-family: 'Inter';
 }
 
 body {
