--- a/frontend/src/components/Navigation/ProfileButton.css
+++ b/frontend/src/components/Navigation/ProfileButton.css
@@ -1,6 +1,14 @@
 .profile-dropdown {
-    display: flex;
     flex-direction: column;
+    align-items: stretch;
+    position: absolute;
+    margin: 0px;
+    padding: 0px;
+    top: 80px; right: 30px;
+}
+
+.profile-dropdown li {
+    padding: 5px 10px;
 }
 
 .profile-dropdown.hidden {
@@ -19,4 +27,11 @@
     border-width: 1px;
     background-color: black;
     color: white;
+}
+
+.modal {
+
+    width: 200px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 6px rgb(68, 64, 64);
 }
