--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -1,1 +1,45 @@
 /* CSS Goes Here */
+.login-modal {
+    height: 200px;
+    width: 350px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 10px;
+}
+
+.login-modal form {
+    display: flex;
+    flex-direction: column;
+    row-gap: 15px;
+    width: 100%;
+}
+
+.login-modal h1 {
+    align-items: center;
+    font-size: 24px;
+    margin-top: 0px;
+    margin-bottom: 5px;
+}
+
+
+.login-button {
+    width: 100%;
+    height: 40px;
+    align-self: center;
+    background-color: #00D199;
+    border: none;
+    border-radius: 4px;
+    margin-top: 10px;
+}
+.login-button:disabled {
+    background-color: gray;
+}
+
+.login-modal input {
+    border: none;
+    border-radius: 2px;
+    width: 100%;
+    height: 20px;
+    padding: 5px 0px;
+}
