--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -21,6 +21,7 @@
   #modal-content {
     position: absolute;
     background-color: black;
+    border-radius: 10px;
+    padding: 20px;
   }
 
-  
