--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -1,5 +1,5 @@
 /* CSS Goes Here */
-.login-modal {
+/* .login-modal {
     height: 200px;
     width: 350px;
     display: flex;
@@ -32,6 +32,7 @@
     border-radius: 4px;
     margin-top: 10px;
 }
+
 .login-button:disabled {
     background-color: gray;
 }
@@ -42,4 +43,4 @@
     width: 100%;
     height: 20px;
     padding: 5px 0px;
-}
+} */
