--- a/frontend/src/components/Navigation/ProfileButton.css
+++ b/frontend/src/components/Navigation/ProfileButton.css
@@ -4,7 +4,7 @@
     position: absolute;
     margin: 0px;
     padding: 0px;
-    top: 80px; right: 30px;
+    top: 80px; 
     background-color: black;
 }
 
@@ -36,3 +36,10 @@
     border-radius: 10px;
     box-shadow: 2px 2px 6px rgb(68, 64, 64);
 }
+
+.logged-user {
+    background-color: black;
+    border-radius: 10px;
+    box-shadow: 2px 2px 6px rgb(68, 64, 64);
+}
+
