--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -1,6 +1,6 @@
 /* CSS Goes Here */
-/* .login-modal {
-    height: 200px;
+.login-modal {
+    max-height: 450px;
     width: 350px;
     display: flex;
     flex-direction: column;
@@ -43,4 +43,14 @@
     width: 100%;
     height: 20px;
     padding: 5px 0px;
-} */
+}
+
+.login-modal p {
+    color: red;
+}
+
+.login-modal a {
+    text-decoration: underline;
+    text-align: center;
+    color: #00D199;
+}
