--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -6,6 +6,7 @@ nav {
     position: sticky;
     top: 0;
     z-index: 100;
+    border-bottom: solid 0.5px gray;
 }
 
 .home {
@@ -39,6 +40,9 @@ a {
     text-decoration: none;
 }
 
+.navigation {
+    filter: drop-shadow(2px 2px 6px white);
+}
 
 
 
