--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,3 +17,13 @@ body {
     padding: 0;
 }
 
+button {
+    border: none;
+    border-radius: 4px;
+    font-size: 18px;
+    background-color: #00D199;
+}
+
+label input {
+    font-size: 16px;
+}
