responsive spot tiles working

--- a/frontend/src/components/Navigation/ProfileButton.css
+++ b/frontend/src/components/Navigation/ProfileButton.css
@@ -2,7 +2,6 @@
     display: none;
 }
 
-
 .profile-dropdown {
     flex-direction: column;
     position: absolute;
@@ -44,6 +43,10 @@
     border-width: 1px;
     background-color: black;
     color: white;
+}
+
+.nav-button:hover {
+    cursor: pointer;
 }
 
 .logged-user {
