--- a/frontend/src/components/Spots/Spots.css
+++ b/frontend/src/components/Spots/Spots.css
@@ -1,16 +1,17 @@
 .spot-tiles {
-    border: dashed;
     display: flex;
     flex-wrap: wrap;
     font-size: 14px;
     justify-content: start;
     align-items: center;
     padding: 20px;
+    width: fit-content;
     margin: 0px auto;
 }
 
 .spot-tile {
     margin: 10px 5px;
+    color: white;
 }
 
 .preview-img {
@@ -20,11 +21,13 @@
     margin-bottom: 15px;
 }
 
+
 .spot-info {
     display: flex;
     justify-content: space-between;
     row-gap: 6px;
     margin-bottom: 10px;
 }
+
 
 
