--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,4 +1,4 @@
-nav {
+.navigation-bar {
     display: grid;
     background-color: black;
     width: 100%;
@@ -20,12 +20,6 @@ nav {
     color: #00D199;
 }
 
-ul {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    list-style: none;
-}
 
 .profile {
     margin-right: 30px;
@@ -36,9 +30,14 @@ ul {
     margin: 10px 5px;
 }
 
-a {
-    text-decoration: none;
+.nav-contents {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    max-height: 80px;
 }
+
 
 .navigation {
     filter: drop-shadow(2px 2px 6px white);
