--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -20,16 +20,18 @@ nav {
     color: #00D199;
 }
 
+.home:active {
+    color: aqua;
+}
+
 ul {
     display: flex;
     justify-content: space-between;
     align-items: center;
     list-style: none;
+    padding: 0px 20px;
 }
 
-.profile {
-    margin-right: 30px;
-}
 
 .home-link {
     font-size: 35px;
@@ -44,5 +46,12 @@ a {
     filter: drop-shadow(2px 2px 6px white);
 }
 
-
+.disappearing-link {
+    display: flex;
+    align-items: center;
+    column-gap: 20px;
+    min-width: fit-content;
+    margin: 0px;
+    padding: 0px;
+}
 
