--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,6 +24,22 @@ button {
     background-color: #00D199;
 }
 
+button:hover:enabled{
+    color: white;
+}
+
 label input {
     font-size: 16px;
+}
+
+a {
+    color: #00D199;
+}
+
+a:hover {
+    color: white;
+}
+
+a:active {
+    color: aqua;
 }
