--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -50,7 +50,8 @@ a {
     display: flex;
     align-items: center;
     column-gap: 20px;
-    min-width: fit-content;
+    max-width: fit-content;
+    min-width: 75px;
     margin: 0px;
     padding: 0px;
 }
