--- a/frontend/src/components/SingleSpot/SingleSpot.css
+++ b/frontend/src/components/SingleSpot/SingleSpot.css
@@ -10,12 +10,13 @@
     display: flex;
     justify-content: space-between;
     column-gap: 8px;
+    height: 500px;
 }
 
 .preview {
     /* border: solid red 1px; */
     width: 50%;
-    min-height: 400px;
+    min-height: 500px;
     max-height: 500px;
 }
 
