--- a/frontend/src/components/Spots/Spots.css
+++ b/frontend/src/components/Spots/Spots.css
@@ -1,8 +1,8 @@
 .container {
     /* border: dashed; */
-    width: 100%;
+    max-height: 100%;
     /* align-items: center; */
-    padding-top: 40px;
+    padding: 40px;
     display: flex;
     justify-content: center;
 }
@@ -19,35 +19,34 @@
     color: #00D199;
 }
 
+
 .spot-tiles {
     /* border: solid red 1px; */
     display: flex;
-    flex-flow: row wrap;
-    /* flex-wrap: wrap; */
+    flex-wrap: wrap;
     font-size: 0.875rem;
     justify-content: flex-start;
     align-items: center;
-    max-width: 90%;
-    column-gap: 10px;
-    row-gap: 4px;
+    max-width: 1250px;
+    column-gap: 12px;
+    row-gap: 12px;
     overflow: hidden;
     /* padding: auto; */
-    margin: 0 40px;
+    /* margin: 0 40px; */
     position: relative;
-}
-
-.spot-tile {
-    padding: 10px;
-    color: white;
+    z-index: 10;
 }
 
 .preview-img {
     /* border: dashed; */
     max-height: 300px;
     max-width: 300px;
-    box-shadow: 2px 2px 6px rgb(68, 64, 64);
     margin-bottom: 15px;
-    object-fit: cover;
+    object-fit: fill;
+}
+
+.preview-img img {
+    border-radius: 16px;
 }
 
 
@@ -69,10 +68,5 @@
     font-family: var(--ff-headers);
     background: aqua;
     color: black;
-    position: absolute;
-    white-space: nowrap;
-    display: block;
-    padding: 5px;
-    z-index: 1000;
 }
 
