--- a/frontend/src/components/CreateNewSpot/CreateSpotForm.css
+++ b/frontend/src/components/CreateNewSpot/CreateSpotForm.css
@@ -16,6 +16,11 @@
     flex-direction: column;
 }
 
+.new-spot-form input {
+    border: dotted pink;
+    height: 28px;
+}
+
 .new-spot-inputs {
     /* border: dotted red; */
     display: flex;
