--- a/frontend/src/components/Navigation/ProfileButton.css
+++ b/frontend/src/components/Navigation/ProfileButton.css
@@ -76,7 +76,7 @@
     width: 100px;
     font-size: 1.125rem;
     color: white;
-    background-color: gray;
+    background-color: #FF5A5E;
 }
 
 .profile-dropdown .logged-user button:hover {
