working on manage reviews

--- a/frontend/src/components/DeleteSpotModal/DeleteSpotModal.css
+++ b/frontend/src/components/DeleteSpotModal/DeleteSpotModal.css
@@ -21,3 +21,9 @@
     background-color: black;
     color: #00D199;
 }
+
+@media only screen and (max-width: 800px) {
+    .delete-modal {
+        min-width: 220px;
+    }
+}
