spot updates but reviews do not clear

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -13,7 +13,7 @@ nav {
     display: flex;
     align-items: center;
     font-size: 1.5rem;
-    color: white;
+    color: #00B69F;
 }
 
 .home:hover {
