--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,7 +8,7 @@ html {
    background-color: black;
    color: white;
    font-family: 'Inter';
-   font-size: 16px;
+   font-size: 18px;
 }
 
 body {
@@ -37,7 +37,7 @@ label input {
 }
 
 label textarea {
-    font-size: 0.9rem;
+    font-size: larger;
     text-indent: 4px;
     font-family: "Inter";
 }
