--- a/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/frontend/src/components/SignupFormModal/SignupForm.css
@@ -1,9 +1,15 @@
 .signup-modal {
     max-height: 800px;
-    width: 350px;
+    max-width: 500px;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+@media only screen and (max-width: 800px){
+    .signup-modal{
+        max-width: 400px;
+    }
 }
 
 .signup-modal form {
@@ -14,20 +20,46 @@
 }
 
 .signup-modal input {
-    border: none;
+    /* border: 1px red solid; */
     border-radius: 2px;
     width: 100%;
-    height: 20px;
-    padding: 5px 0px;
+    height: 40px;
 }
 
 .signup-modal button {
+    width: 100%;
     height: 40px;
+    align-self: center;
     margin-top: 10px;
+}
+
+.signup-modal button:disabled {
+    background-color: darkgray;
 }
 
 .errors {
     color: red;
     font-size: medium;
     margin: 8px 0px;
+}
+
+.signup-modal-inputs input {
+    text-indent: 4px;
+    background-color: black;
+    font-size: large;
+    font-weight: 400;
+    width: 99%;
+    border-bottom: solid gray 1px;
+    height: 60px;
+    color: white;
+}
+
+.signup-modal-inputs input#bottom {
+    border-bottom: 0px;
+}
+
+.signup-modal-inputs {
+    border: solid gray 1px;
+    border-radius: 4px;
+    width: 100%;
 }
