broke reviews but fixed them!

--- a/frontend/src/components/Spots/Spots.css
+++ b/frontend/src/components/Spots/Spots.css
@@ -56,9 +56,10 @@
 }
 
 .rating{
+    /* border: solid yellow; */
     display: flex;
     align-items: center;
-    column-gap: 4px;
+    column-gap: 0px;
 }
 
 
