--- a/frontend/src/components/ManageSpots/ManageSpots.css
+++ b/frontend/src/components/ManageSpots/ManageSpots.css
@@ -13,7 +13,7 @@
 
 .manage-current-spots button {
     height: 28px;
-    background-color: lightgray;
+    background-color: #FF5A5E;
 }
 
 .buttons {
