--- a/frontend/src/components/CreateNewSpot/CreateSpotForm.css
+++ b/frontend/src/components/CreateNewSpot/CreateSpotForm.css
@@ -155,3 +155,14 @@ input#price {
     margin: 0;
     width: 98%;
 }
+
+form input {
+    background-color: black;
+    color: white;
+    border: solid gray 1px;
+}
+
+form textarea {
+    background-color: black;
+    color: white;
+}
