--- a/frontend/src/components/CreateNewSpot/CreateSpotForm.css
+++ b/frontend/src/components/CreateNewSpot/CreateSpotForm.css
@@ -2,6 +2,7 @@
     /* border: dotted yellow; */
     max-width: 45%;
     margin: 0 auto;
+    min-width: 380px;
 }
 
 @media only screen and (max-width: 800px){
