--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -24,7 +24,7 @@
 
 .login-button {
     width: 100%;
-    height: 40px;
+    height: 44px;
     align-self: center;
     margin-top: 10px;
 }
@@ -34,8 +34,8 @@
 }
 
 .login-modal input {
-    border: none;
-    border-radius: 2px;
+    /* border: dotted; */
+    /* border-radius: 2px; */
     width: 100%;
     height: 20px;
     padding: 5px 0px;
@@ -46,3 +46,4 @@
     font-size: medium;
     margin: 8px 0px;
 }
+
