--- a/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/frontend/src/components/SignupFormModal/SignupForm.css
@@ -28,7 +28,7 @@
 
 .signup-modal button {
     width: 100%;
-    height: 40px;
+    height: 44px;
     align-self: center;
     margin-top: 10px;
 }
@@ -50,16 +50,23 @@
     font-weight: 400;
     width: 99%;
     border-bottom: solid gray 1px;
-    height: 60px;
+    border-top: 0px;
+    height: 50px;
     color: white;
+    border-radius: 0px;
 }
 
 .signup-modal-inputs input#bottom {
-    border-bottom: 0px;
+    border-radius: 0px 0px 8px 8px;
+}
+
+.signup-modal-inputs input#top {
+    border-top: solid 1px gray;
+    border-radius: 8px 8px 0px 0px;
 }
 
 .signup-modal-inputs {
-    border: solid gray 1px;
-    border-radius: 4px;
+    /* border: solid gray 1px; */
+    /* border-radius: 4px; */
     width: 100%;
 }
