--- a/frontend/src/components/SingleSpot/SingleSpot.css
+++ b/frontend/src/components/SingleSpot/SingleSpot.css
@@ -3,6 +3,8 @@
     max-width: 1000px;
     margin: 0 auto;
     padding: 0px 10px;
+    display: flex;
+    flex-direction: column;
 }
 
 .single-spot li {
@@ -16,7 +18,7 @@
     display: flex;
     justify-content: space-between;
     column-gap: 8px;
-    height: 500px;
+    height: 500px;  
 }
 
 .preview {
@@ -77,11 +79,20 @@
     /* border: dashed maroon; */
     display: flex;
     margin-top: 20px;
+
 }
 
 .host-info {
     /* border: dotted indianred; */
     width: 60%;
+}
+
+.map-review-box {
+    /* border: solid red; */
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 12px;
 }
 
 .info {
@@ -93,10 +104,9 @@
 .price-review-box {
     border: solid white;
     border-radius: 10px;
-    width: 40%;
+    max-width: 100%;
     max-height: fit-content;
-    margin-left: 20px;
-    padding: 10px 20px;
+    padding: 8px;
 }
 
 .price {
@@ -144,10 +154,22 @@ p.price {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    overflow: hidden;
+    overflow: scroll;
     margin: 20px 0px;
     padding: 0px;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.price-review::-webkit-scrollbar {
+    display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .price-review {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
+  
 
 .reserve {
     /* border: dotted; */
@@ -187,4 +209,34 @@ p.price {
     /* border: dotted; */
     font-size: 16px;
     color: yellow;
+}
+
+@media only screen and (max-width: 750px) {
+    .img-grid {
+        flex-direction: column;
+        min-height: fit-content;
+        margin: 0px;
+        row-gap: 8px;
+    }
+    .preview {
+        height: fit-content;
+        width: 100%;
+    }
+
+    .preview img,
+    .not-preview#edge-top,
+    .not-preview#edge-bottom {
+        border-radius: 8px;
+    }
+
+    .not-preview-box {
+        /* border: solid red; */
+        width: 100%;
+    }
+
+    .not-preview-box img {
+        height: 200px;
+        width: 50%;
+        border-radius: 8px;
+    }
 }
