--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -56,3 +56,15 @@ a {
     padding: 0px;
 }
 
+.create-spot-link {
+    font-size: 1rem;
+}
+
+@media only screen and (max-width: 430px) {
+    .create-spot-link {
+        font-size: .75rem;
+    }
+}
+
+
+
