--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,6 +24,7 @@ button {
     border-radius: 4px;
     font-size: 1.125rem;
     background-color: #00D199;
+    min-width: fit-content;
 }
 
 button:hover:enabled{
@@ -102,4 +103,9 @@ h1 {
 
 .star#icon {
     color: yellow;
+}
+
+svg {
+    font-size: min(0.75em);
+    font-size: max(1em);
 }
